# roboflex_dynamixel

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
cmake_dynamixel/: CMakeLists.txt
examples/: test_group_controller_py.py  test_group_node_cpp.cpp  test_group_node_py.py
include/roboflex_dynamixel/: dynamixel.h  dynamixel_controller.h
python/: CMakeLists.txt  pybindings.cpp
src/: dynamixel.cpp  dynamixel_controller.cpp
